Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/NoTargetLambda.out
NoTargetLambda.java:10:19: compiler.err.unexpected.lambda
1 error
